--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <h1> Introduction to front end development </h1>
-<p> New paragraph </p>
 
-<p> this is test only </p>
+<p>A front-end developer architects and develops client part of websites and applications using web technologies (languages)  </p>
 
 <ul>
-
-<li style="color:red;">HTML</li>
-<li style="color:blue;">CSS</li>
-<li style="color:green;">JavaScript</li>
-
+    <li style="color:red;">HTML</li>
+    <li style="color:blue;">CSS</li>
+    <li style="color:green;">JavaScript</li>
 </ul>
